mule-fundamentals/v/3.7/download-and-launch-anypoint-studio.adoc
= Download and Launch Anypoint Studio
:keywords: download, studio, server, test, deploy, applications

image:StudioDownload-n.png[StudioDownload]

This introductory content focuses primarily on using *Anypoint Studio*, the graphical integration design and implementation environment for Anypoint Platform and the Mule runtime.

For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.7/installing[installation instructions] and to link:/mule-fundamentals/v/3.7/setting-up-your-dev-environment[Setting Up Your Development Environment].

. Before downloading and launching Anypoint Studio, install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[Java SE JDK 8].
+
[NOTE]
If you are using a Mac computer running OS X and if you are installing Anypoint Studio on a new computer or a fresh installation, you must also install link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase6-419409.html[JRE 1.6], which provides important libraries used by later JDK versions. Install JDK 6 first and then install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[JDK 7].
+
See also: <<Running Studio on a Mac>>

. Check to confirm that JDK 7 or JDK 8 is in place on your system. From the command line (Terminal app for a Mac, Command Prompt for Windows), run: `java -version`
+
The response should appear similar to the following for JDK 7:
+
[source, code, linenums]
----
java version "1.7.0_75"
Java(TM) SE Runtime Environment (build 1.7.0_75-b13)
Java HotSpot(TM) 64-Bit Server VM (build 24.75-b04, mixed mode)
----
+
If a Java runtime environment is _not_ installed, install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7].

. link:https://www.mulesoft.com/platform/studio[Download *Anypoint Studio*].
. Download the version of Studio that is compatible with your operating system: Windows, Mac, or Linux.
. Unzip the downloaded file to a directory on a hard drive located on your host machine. The *AnypointStudio* folder or directory appears when the unzip operation completes.
+
[WARNING]
*Windows*: It's important to extract Anypoint Studio into the 'C:\' root folder. Also, if you are using a Windows Anti-Virus application, ensure that the `plugin/` and `features/` directories are under the “trusted” category.

. Open Anypoint Studio:
.. *Mac*: Double-click the *AnypointStudio* file, located in the *AnypointStudio* folder.
.. *Windows*: Double-click the *AnypointStudio.exe* file, located in the *AnypointStudio* directory.
.. *Linux*: Double-click the *AnypointStudio* file icon, located in the *AnypointStudio* directory.
+
image:Studiofolderstructure.png[Studiofolderstructure]

. If the wrong version of Java is present on your computer, the following may occur after you start Studio:
.. *Mac*: The command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK 7 or JDK 8. See: <<Running Studio on a Mac>>
.. *Windows*: This message appears when you start Studio:
Incompatible JVM - Version _<number>_ of the JVM is not suitable for this product. Version 1.7 or greater is required.
Go to link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7] or  or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[Java SE JDK 8], download the JDK, and install it. Then restart AnypointStudio.exe from where you unzipped the software distribution.
. Click *OK* to accept the default workspace.
+
image:workspacelauncher.png[workspacelauncher]

. Anypoint Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.

== Running Studio on a Mac

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio _outside_ the App Store, your system may prevent you from running Anypoint Studio applications and issue a warning message advising you to change your security settings to proceed. If you have Administrator privileges, you can adjust the security settings under *System Preferences* > *Security & Privacy*. However, you can also right-click on the application to bypass the security warning and proceed to open the app.

== See Also

* *NEXT STEP:* Learn the link:/mule-fundamentals/v/3.7/anypoint-studio-essentials[essentials of Anypoint Studio].
* For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.7/installing[installation instructions]. 
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
