mule-fundamentals/v/3.8/download-and-launch-anypoint-studio.adoc
= Download and Launch Anypoint Studio
:keywords: download, studio, server, test, deploy, applications

*Anypoint Studio* is the graphical integration design environment of the Anypoint Plaform for applications that are deployed to Mule runtime.

For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.8/installing[installation instructions] and to link:/mule-fundamentals/v/3.8/setting-up-your-dev-environment[Setting Up Your Development Environment].

[IMPORTANT]
====

* Before downloading and launching Anypoint Studio, install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[Java SE JDK 8].

* If you are using a Mac computer running OS X and if you are installing Anypoint Studio on a new computer or a fresh installation, you must also install link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase6-419409.html[JRE 1.6], which provides important libraries used by later JDK versions. Install JDK 6 first and then install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[JDK 7] or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[Java SE JDK 8].
+
After installing JDK 7 or 8, you need to change the default Java virtual machine (JVM) from v6 to the later version.
** Open a Terminal and enter this command as shown in the following example:
+
[source,code,linenums]
----
/usr/libexec/java_home -V
Matching Java Virtual Machines (2):
1.8.0_101, x86_64:	"Java SE 8"	/Library/Java/JavaVirtualMachines/jdk1.8.0_101.jdk/Contents/Home
1.6.0_65-b14-468, x86_64:	"Java SE 6"	/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Home
----
+
** Enter a command such as this that sets the JDK 8 to the default JVM.
+
[source]
----
export JAVA_HOME=`/usr/libexec/java_home -v 1.8.0_101`
----

====

To download and install Anypoint Studio:

. link:https://www.mulesoft.com/platform/studio[Download *Anypoint Studio*] that is compatible with your operating system: Windows, Mac, or Linux.
. Check to confirm that JDK 7 or JDK 8 is in place on your system. From the command line (Terminal app for a Mac, Command Prompt for Windows), run: `java -version`
+
The response should appear similar to the following for JDK 7:
+
[source, code, linenums]
----
java version "1.7.0_75"
Java(TM) SE Runtime Environment (build 1.7.0_75-b13)
Java HotSpot(TM) 64-Bit Server VM (build 24.75-b04, mixed mode)
----
+
If a Java runtime environment is _not_ installed, install link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7].
+
[CAUTION]
====
*Mac Installation:* In Anypoint Studio version 6 and newer you can no longer unzip the distribution zip file by double-clicking the zip file to extract the software. Before downloading Studio, you must set your *Security & Privacy* setting to *Allow apps downloaded from* to *Anywhere*. Until you allow apps to be downloaded from anywhere, Apple displays the message, "`AnypointStudio` is damaged and can't be opened. You should move it to the Trash". (This message is incorrect--it only means that Apple has an issue with apps not downloaded from Apple.)

To set this:

. After downloading link:https://www.mulesoft.com/platform/studio[Anypoint Studio], unzip the software to create the `AnypointStudio.app` file. You can use any unzip program to unzip the software. Do not double-click the app program yet.
. Click the Apple icon in the upper right corner of your screen, and click *System Preferences*.
. Click *Security & Privacy*.
. Click the lock icon in the lower left of the Security & Privacy menu to unlock so you can change the settings.
. Click the *General* tab.
. Supply your Mac password.
. Change *Allow apps downloaded from* to *Anywhere*:
+
image:mac-security-menu.png[mac security and privacy menu]
+
. Now double-click `AnypointStudio.app` and click *Open*.

====
+
. Unzip the zip file.
+
[WARNING]
*Windows*: It's important to extract Anypoint Studio into the 'C:\' root folder. Also, if you are using a Windows Anti-Virus application, ensure that the `plugin/` and `features/` directories are under the “trusted” category.
+
. Open Anypoint Studio:
.. *Windows*: Double-click the *AnypointStudio.exe* file, located in the *AnypointStudio* directory.
.. *Linux*: Double-click the *AnypointStudio* file icon, located in the *AnypointStudio* directory.
+
image:Studiofolderstructure.png[Studiofolderstructure]
+
. If the wrong version of Java is present on your computer, the following may occur after you start Studio:
.. *Mac*: The command triggers a prompt to install the JDK tools directly from Apple. Follow the instructions to download and install JDK 7 or JDK 8. 
See: <<Running Studio on a Mac>>
.. *Windows*: This message appears when you start Studio:
Incompatible JVM - Version _<number>_ of the JVM is not suitable for this product. Version 1.7 or greater is required.
Go to link:http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html[Java SE JDK 7] or  or link:http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html[Java SE JDK 8], download the JDK, and install it. Then restart AnypointStudio.exe from where you unzipped the software distribution.
. Click *OK* to accept the default workspace.
+
image:workspacelauncher.png[workspacelauncher]

. Anypoint Studio launches, then displays a Welcome page. Click *Create a Project* to begin development immediately.

== Running Studio on a Mac

By default, Mac OS X restricts execution of applications acquired outside the Apple App Store. Because you download Anypoint Studio _outside_ the App Store, your system may prevent you from running Anypoint Studio applications and issue a warning message advising you to change your security settings to proceed. If you have Administrator privileges, you can adjust the security settings under *System Preferences* > *Security & Privacy*. However, you can also right-click on the application to bypass the security warning and proceed to open the app.

== See Also

* *NEXT STEP:* Learn the link:/mule-fundamentals/v/3.8/anypoint-studio-essentials[essentials of Anypoint Studio].
* For details on installing the Mule standalone runtime, the Mule Management Console, and Mule's Community runtime, refer to the comprehensive link:/mule-user-guide/v/3.8/installing[installation instructions]. 
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
